--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,2 +1,19 @@
 extends:
   - "stylelint-config-css-modules"
+rules:
+  no-empty-source: ~
+  block-no-empty: ~
+  color-no-invalid-hex: true
+  comment-empty-line-before:
+    - always
+    - ignore:
+      - stylelint-commands
+    - after-comment
+#  indentation:
+#    - 2
+#    - except:
+#      - value
+  max-empty-lines: 1
+  unit-whitelist: [ px, '%', em, deg, s, rem ]
+  at-rule-no-unknown: null
+scss/at-rule-no-unknown: true
