changes  for good function in  ssr

--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,7 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "/src/stylesheets"
+                "src/stylesheets"
               ]
             },
             "assets": [
@@ -127,7 +127,12 @@
           "options": {
             "outputPath": "dist/server",
             "main": "src/main.server.ts",
-            "tsConfig": "src/tsconfig.server.json"
+            "tsConfig": "src/tsconfig.server.json",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/stylesheets"
+              ]
+            }
           }
         }
       }
