--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
     "git-describe": "^4.0.3",
+    "jquery": "^3.3.1",
     "ngx-facebook": "^2.4.0",
+    "ngx-slick-carousel": "^0.4.0",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
@@ -74,7 +77,7 @@
     "jest-image-snapshot": "^2.4.3",
     "jest-preset-angular": "^5.2.3",
     "jest-sonar-reporter": "^2.0.0",
-    "karma": "~1.7.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
@@ -83,10 +86,10 @@
     "lodash": "^4.16.2",
     "phantomjs-prebuilt": "^2.1.7",
     "prettier": "^1.13.7",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.0",
     "rimraf": "^2.6.2",
     "sass-lint": "^1.12.1",
-    "stylelint": "^9.4.0",
+    "stylelint": "^9.5.0",
     "stylelint-config-css-modules": "^1.3.0",
     "testcafe": "^0.20.5",
     "testcafe-live": "^0.1.3",
