--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,7 @@
               "./src/assets/font/titillium/titillium.css",
               "./node_modules/normalize.css/normalize.css",
               "src/styles.scss",
+              "./node_modules/leaflet/dist/leaflet.css",
               "./node_modules/slick-carousel/slick/slick.scss",
               "./node_modules/slick-carousel/slick/slick-theme.scss"
             ],
@@ -52,7 +53,8 @@
             },
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/slick-carousel/slick/slick.min.js"
+              "./node_modules/slick-carousel/slick/slick.min.js",
+              "./node_modules/leaflet/dist/leaflet.js"
             ]
           },
           "configurations": {
