--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "core-js": "^2.5.4",
     "git-describe": "^4.0.3",
     "jquery": "^3.3.1",
+    "leaflet": "^1.3.4",
     "ngx-facebook": "^2.4.0",
     "ngx-slick-carousel": "^0.4.0",
     "normalize.css": "^8.0.0",
