--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "angular-in-memory-web-api": "^0.6.0",
     "bulma": "^0.7.1",
+    "bulma-utilities": "^0.3.1",
     "core-js": "^2.5.4",
     "git-describe": "^4.0.3",
     "jquery": "^3.3.1",
