--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular.io-example": {
+    "app-negux": {
       "root": "",
       "projectType": "application",
       "architect": {
@@ -81,18 +81,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular.io-example:build"
+            "browserTarget": "app-negux:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular.io-example:build:production"
+              "browserTarget": "app-negux:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular.io-example:build"
+            "browserTarget": "app-negux:build"
           }
         },
         "test": {
@@ -154,7 +154,7 @@
         }
       }
     },
-    "angular.io-example-e2e": {
+    "app-negux-e2e": {
       "root": "",
       "projectType": "application",
       "cli": {},
@@ -164,7 +164,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "angular.io-example:serve"
+            "devServerTarget": "app-negux:serve"
           }
         },
         "lint": {
@@ -191,5 +191,5 @@
       "prefix": "app"
     }
   },
-  "defaultProject": "angular.io-example"
+  "defaultProject": "app-negux"
 }
