--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marleyjs",
+  "name": "negux",
   "version": "0.7.4",
   "engines": {
     "node": ">=8.11.2",
@@ -7,7 +7,7 @@
   },
   "private": true,
   "repository": {},
-  "description": "Modern Angular 6+ Stack.",
+  "description": "Web page - Negux innovation",
   "scripts": {
     "ng": "ng",
     "test": "jest --watch",
@@ -20,19 +20,19 @@
     "test:ci": "jest --runInBand",
     "test:coverage": "rimraf coverage && jest --coverage",
     "analyzer": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
-    "prettier": "prettier {src,e2e}/*.ts --write && prettier {src,e2e}/**/*.ts --write",
     "setup:project": "yarn install && yarn build:ssr && yarn start",
-    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n \"Marley.js documentation\" -w -o --theme \"postmark\"",
-    "compodoc:serve": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s -n \"Marley.js documentation\" -w -o --theme \"postmark\"",
-    "build:client:server": "yarn lint:styles && yarn prettier && yarn build:prod && ng run angular.io-example:server",
+    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n \"Negux - documentation\" -w -o --theme \"postmark\"",
+    "compodoc:serve": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s -n \"Negux - documentation\" -w -o --theme \"postmark\"",
+    "build:client:server": "yarn build:prod && ng run app-negux:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "build:ssr": "yarn build:client:server && yarn webpack:server && node version.js",
+    "serve:ssr": "node dist/server",
     "build:dev": "ng build",
     "build:prod": "ng build --prod",
     "serve": "ng serve",
     "start": "node dist/server.js"
   },
-  "author": "Petr Nikolas",
+  "author": "Negux",
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "^6.0.0",
@@ -55,6 +55,7 @@
     "git-describe": "^4.0.3",
     "jquery": "^3.3.1",
     "leaflet": "^1.3.4",
+    "localstorage-polyfill": "^1.0.1",
     "ngx-facebook": "^2.4.0",
     "ngx-slick-carousel": "^0.4.0",
     "normalize.css": "^8.0.0",
