--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "ng": "ng",
     "test": "jest --watch",
-    "lint": "tslint ./src/**/*.ts -t verbose",
+    "lint": "tslint --project tsconfig.json ./src/**/*.ts -t verbose",
     "lint:styles": "stylelint ./src/**/*.scss",
     "lint:ci": "yarn lint:styles && yarn lint",
     "conventional-changelog": "conventional-changelog",
@@ -21,8 +21,8 @@
     "test:coverage": "rimraf coverage && jest --coverage",
     "analyzer": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
     "setup:project": "yarn install && yarn build:ssr && yarn start",
-    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n \"Negux - documentation\" -w -o --theme \"postmark\"",
-    "compodoc:serve": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s -n \"Negux - documentation\" -w -o --theme \"postmark\"",
+    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n \"Portal Institucional - ADSIB documentacion\" -w -o --theme \"postmark\"",
+    "compodoc:serve": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s -n \"Portal Institucional - ADSIB documentacion\" -w -o --theme \"postmark\"",
     "build:client:server": "yarn build:prod && ng run app-negux:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "build:ssr": "yarn build:client:server && yarn webpack:server && node version.js",
